// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelinesDialog > it renders correctly in multi user mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="padding-right: 1024px; overflow: hidden;"
  >
    <div
      aria-hidden="true"
    />
    <div
      class="MuiDialog-root MuiModal-root css-1424xw8-MuiModal-root-MuiDialog-root"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="MuiBackdrop-root MuiModal-backdrop MuiDialog-backdrop css-1cennmq-MuiBackdrop-root-MuiDialog-backdrop"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        data-testid="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiDialog-container MuiDialog-scrollPaper css-19do60a-MuiDialog-container"
        role="presentation"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          aria-labelledby="_r_0_"
          aria-modal="true"
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperWidthSm css-uq7k9j-MuiPaper-root-MuiDialog-paper"
          data-mui-focusable=""
          id="pipelineSelectorDialog"
          role="dialog"
          style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
          tabindex="-1"
        >
          <div
            class="MuiDialogContent-root css-kw13he-MuiDialogContent-root"
          >
            <div
              class="root_f1vld0bw topLevelToolbar_faeji1w"
            >
              <div
                style="min-width: 100px;"
              >
                <div
                  class="breadcrumbs_farqb1 flex_f16jawj4"
                />
                <div
                  class="flex_f16jawj4"
                >
                  <span
                    class="pageName_fe4yf9p ellipsis_f15ay66x"
                    data-testid="page-title"
                  >
                    Choose a pipeline
                  </span>
                </div>
              </div>
              <div
                class="actions_ffoeey"
              />
            </div>
            <div
              class="page_f1flacxk f1h5lfj6"
            >
              <div
                class="tabs_ff8rz57"
              >
                <div
                  class="indicator_fp4eggn"
                  style="left: -5px; width: 5px; display: block;"
                />
                <span
                  style="display: inline-block; min-width: 20px; width: 20px;"
                />
                <button
                  aria-label="Only people who have access to this namespace will be able to view and use these pipelines."
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorPrimary button_ff2g68i active_fz0wpsl css-dizc30-MuiButtonBase-root-MuiButton-root"
                  data-mui-internal-clone-element="true"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Private
                  </span>
                </button>
                <button
                  aria-label="Everyone in your organization will be able to view and use these pipelines."
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorPrimary button_ff2g68i css-dizc30-MuiButtonBase-root-MuiButton-root"
                  data-mui-internal-clone-element="true"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Shared
                  </span>
                </button>
              </div>
              <div
                class="pageOverflowHidden_f15djeb2"
              >
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2 css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                    spellcheck="false"
                    style="height: 48px; max-width: 100%; width: 100%;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="tableFilterBox"
                      id="tableFilterBox-label"
                    >
                      Filter pipelines
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedStart css-4bojcr-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                          data-testid="FilterListIcon"
                          focusable="false"
                          style="color: rgb(128, 134, 139); padding-right: 16px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
                          />
                        </svg>
                      </div>
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-2u11ia-MuiInputBase-input-MuiOutlinedInput-input"
                        id="tableFilterBox"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-ex8a5f-MuiNotchedOutlined-root"
                        >
                          <span>
                            Filter pipelines
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="header_f15jqnss"
                >
                  <div
                    class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
                  >
                    <span
                      style="display: inline-block; min-width: 42px; width: 42px;"
                    />
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Pipeline name"
                  >
                    <span
                      aria-label="Sort"
                      class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionDesc ellipsis_f15ay66x css-12l68kz-MuiButtonBase-root-MuiTableSortLabel-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                    >
                      Pipeline name
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon css-asweb8-MuiSvgIcon-root-MuiTableSortLabel-icon"
                        data-testid="ArrowDownwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 50%;"
                    title="Description"
                  >
                    <span
                      aria-label="Cannot sort by this column"
                      class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc ellipsis_f15ay66x css-12l68kz-MuiButtonBase-root-MuiTableSortLabel-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                    >
                      Description
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Uploaded on"
                  >
                    <span
                      aria-label="Sort"
                      class="MuiButtonBase-root MuiTableSortLabel-root Mui-active MuiTableSortLabel-directionDesc ellipsis_f15ay66x css-12l68kz-MuiButtonBase-root-MuiTableSortLabel-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                    >
                      Uploaded on
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon css-asweb8-MuiSvgIcon-root-MuiTableSortLabel-icon"
                        data-testid="ArrowDownwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="scrollContainer_fea2b5v"
                  style="min-height: 60px;"
                >
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1tpgjhd-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                        >
                          <input
                            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                            type="radio"
                          />
                          <span
                            class="css-9oxshb-MuiRadioButtonIcon-root"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          aria-label="Name: mock pipeline name"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1tpgjhd-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                        >
                          <input
                            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                            type="radio"
                          />
                          <span
                            class="css-9oxshb-MuiRadioButtonIcon-root"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          aria-label="Name: mock pipeline name"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="footer_f1fl9hjk"
                >
                  <span
                    class="fzbgmju"
                  >
                    Rows per page:
                  </span>
                  <div
                    class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-x0hrh7-MuiInputBase-root-MuiInput-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1skkqr-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="_r_9_"
                        role="combobox"
                        tabindex="0"
                      >
                        10
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                        id="_r_b_"
                        tabindex="-1"
                        value="10"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-sravn7-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="prev-page-btn"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ChevronLeftIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                      />
                    </svg>
                  </button>
                  <button
                    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-sravn7-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="next-page-btn"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ChevronRightIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiDialogActions-root MuiDialogActions-spacing css-15fu35s-MuiDialogActions-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-1ffl2lv-MuiButtonBase-root-MuiButton-root"
              id="cancelPipelineSelectionBtn"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
            <button
              class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-1ffl2lv-MuiButtonBase-root-MuiButton-root"
              disabled=""
              id="usePipelineBtn"
              tabindex="-1"
              type="button"
            >
              Use this pipeline
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelinesDialog > it renders correctly in single user mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="padding-right: 1024px; overflow: hidden;"
  >
    <div
      aria-hidden="true"
    />
    <div
      class="MuiDialog-root MuiModal-root css-1424xw8-MuiModal-root-MuiDialog-root"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="MuiBackdrop-root MuiModal-backdrop MuiDialog-backdrop css-1cennmq-MuiBackdrop-root-MuiDialog-backdrop"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        data-testid="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiDialog-container MuiDialog-scrollPaper css-19do60a-MuiDialog-container"
        role="presentation"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          aria-labelledby="_r_i_"
          aria-modal="true"
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperWidthSm css-uq7k9j-MuiPaper-root-MuiDialog-paper"
          data-mui-focusable=""
          id="pipelineSelectorDialog"
          role="dialog"
          style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
          tabindex="-1"
        >
          <div
            class="MuiDialogContent-root css-kw13he-MuiDialogContent-root"
          >
            <div
              class="root_f1vld0bw topLevelToolbar_faeji1w"
            >
              <div
                style="min-width: 100px;"
              >
                <div
                  class="breadcrumbs_farqb1 flex_f16jawj4"
                />
                <div
                  class="flex_f16jawj4"
                >
                  <span
                    class="pageName_fe4yf9p ellipsis_f15ay66x"
                    data-testid="page-title"
                  >
                    Choose a pipeline
                  </span>
                </div>
              </div>
              <div
                class="actions_ffoeey"
              />
            </div>
            <div
              class="page_f1flacxk f1h5lfj6"
            >
              <div
                class="pageOverflowHidden_f15djeb2"
              >
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2 css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                    spellcheck="false"
                    style="height: 48px; max-width: 100%; width: 100%;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="tableFilterBox"
                      id="tableFilterBox-label"
                    >
                      Filter pipelines
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedStart css-4bojcr-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                          data-testid="FilterListIcon"
                          focusable="false"
                          style="color: rgb(128, 134, 139); padding-right: 16px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
                          />
                        </svg>
                      </div>
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-2u11ia-MuiInputBase-input-MuiOutlinedInput-input"
                        id="tableFilterBox"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-ex8a5f-MuiNotchedOutlined-root"
                        >
                          <span>
                            Filter pipelines
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="header_f15jqnss"
                >
                  <div
                    class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
                  >
                    <span
                      style="display: inline-block; min-width: 42px; width: 42px;"
                    />
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Pipeline name"
                  >
                    <span
                      aria-label="Sort"
                      class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionDesc ellipsis_f15ay66x css-12l68kz-MuiButtonBase-root-MuiTableSortLabel-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                    >
                      Pipeline name
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon css-asweb8-MuiSvgIcon-root-MuiTableSortLabel-icon"
                        data-testid="ArrowDownwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 50%;"
                    title="Description"
                  >
                    <span
                      aria-label="Cannot sort by this column"
                      class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-directionAsc ellipsis_f15ay66x css-12l68kz-MuiButtonBase-root-MuiTableSortLabel-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                    >
                      Description
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Uploaded on"
                  >
                    <span
                      aria-label="Sort"
                      class="MuiButtonBase-root MuiTableSortLabel-root Mui-active MuiTableSortLabel-directionDesc ellipsis_f15ay66x css-12l68kz-MuiButtonBase-root-MuiTableSortLabel-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                    >
                      Uploaded on
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon css-asweb8-MuiSvgIcon-root-MuiTableSortLabel-icon"
                        data-testid="ArrowDownwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="scrollContainer_fea2b5v"
                  style="min-height: 60px;"
                >
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1tpgjhd-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                        >
                          <input
                            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                            type="radio"
                          />
                          <span
                            class="css-9oxshb-MuiRadioButtonIcon-root"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          aria-label="Name: mock pipeline name"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1tpgjhd-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                        >
                          <input
                            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                            type="radio"
                          />
                          <span
                            class="css-9oxshb-MuiRadioButtonIcon-root"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          aria-label="Name: mock pipeline name"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="footer_f1fl9hjk"
                >
                  <span
                    class="fzbgmju"
                  >
                    Rows per page:
                  </span>
                  <div
                    class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-x0hrh7-MuiInputBase-root-MuiInput-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1skkqr-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="_r_n_"
                        role="combobox"
                        tabindex="0"
                      >
                        10
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                        id="_r_p_"
                        tabindex="-1"
                        value="10"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-sravn7-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="prev-page-btn"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ChevronLeftIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                      />
                    </svg>
                  </button>
                  <button
                    class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-sravn7-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="next-page-btn"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ChevronRightIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiDialogActions-root MuiDialogActions-spacing css-15fu35s-MuiDialogActions-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-1ffl2lv-MuiButtonBase-root-MuiButton-root"
              id="cancelPipelineSelectionBtn"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
            <button
              class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-1ffl2lv-MuiButtonBase-root-MuiButton-root"
              disabled=""
              id="usePipelineBtn"
              tabindex="-1"
              type="button"
            >
              Use this pipeline
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
